--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/src/assets/logo/logo_a2.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anggi Dwi Sumiyadi</title>
     <link
