--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/tes-pro/favicon.ico" />
+    <link rel="icon" href="/tes-pro/assets/logo_a2-mJ8zE1rW.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anggi Dwi Sumiyadi</title>
     <link
